--- a/about.html
+++ b/about.html
@@ -2,7 +2,10 @@
 layout: default
 ---
 
-<img src="/img/Fiji_1.jpg" alt="" />
-<h1>About</h1>
+
+<div class="image-with-text">
+  <img src="/img/Fiji_1.jpg" alt="" />
+  <h1 class="text-on-image">Über uns</h1>
+</div>
 
 <p>Lorem ipsum sit amet, consectetur adipisicing elit. Modi, nostrum aliquam. Temporibus, repellat cumque sapiente necessitatibus, eaque aspernatur beatae minima minus dolorem aut cum quo optio nemo nihil enim ipsam.</p>
