--- a/kontakt.html
+++ b/kontakt.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 
-<h2>Hallo</h2>
+<h2>Kontakt zu uns aufnehmen</h2>
 
 <p>Lorem ipsum sit amet, consectetur adipisicing elit. Modi, nostrum aliquam. Temporibus, repellat cumque sapiente necessitatibus, eaque aspernatur beatae minima minus dolorem aut cum quo optio nemo nihil enim ipsam.</p>
 
-<img src="/img/Fiji_1.jpg" alt="" />
+  <img src="/img/Fiji_1.jpg" alt="" />
