--- a/about.html
+++ b/about.html
@@ -5,6 +5,14 @@ layout: default
 
 <h2>Hallo</h2>
 
-<p>Lorem ipsum sit amet, consectetur adipisicing elit. Modi, nostrum aliquam. Temporibus, repellat cumque sapiente necessitatibus, eaque aspernatur beatae minima minus dolorem aut cum quo optio nemo nihil enim ipsam.</p>
+<p class="text-about">Schön, dass ihr uns gefunden habt. Wir sind Verena&Flo und sind seir August 2016 auf grosser Reise. Wir haben in Deutschland alles verkauft, was sich so angesammelt hat und sind mit Rucksack und Laptop losgezogen.</p>
 
-<img src="/img/Fiji_1.jpg" alt="" />
+<img class="img-about-left" src="/img/Fiji_1.jpg" alt="" />
+
+<p>Unser Blog dient dazu unser erlebtes niederzuschreiben, damit Familie, Freunde und alle die es sonst interessiert nachlesen können, was bei uns so passiert. Neben diesem Blog gibt es einen Wir versuchen den Blog immer so aktuell wie möglich zu halten, da wird aber viel Arbeiten während der Reise kommen wir doch nicht immer zum Schreiben. Für immer neue Bilder unserer Reise gibt es einen <a href="">Instagram-Account</a>. </p>
+
+<p class="text-about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+<img class="img-about-right" src="/img/Fiji_1.jpg" alt="" />
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
