--- a/mehr.html
+++ b/mehr.html
@@ -5,6 +5,18 @@ layout: default
 
 <h2>Andere Themen</h2>
 
-<p>Lorem ipsum sit amet, consectetur adipisicing elit. Modi, nostrum aliquam. Temporibus, repellat cumque sapiente necessitatibus, eaque aspernatur beatae minima minus dolorem aut cum quo optio nemo nihil enim ipsam.</p>
+<p>Wenn man auf große Reise geht, dann gibt es viel zu bedenken und zu planen. Hier findet ihr ein paar hilfreiche Tipps und Tricks, sowie Gedanken die wir uns gemacht haben.</p>
 
-<img src="/img/Fiji_1.jpg" alt="" />
+<div class="themes-more">
+  <a href="">
+    <img src="/img/nz-3.jpg" alt="">
+    <h2>Packliste</h2>
+  </a>
+</div>
+
+<div class="themes-more">
+  <a href="">
+    <img src="/img/nz-3.jpg" alt="">
+    <h2>Packliste</h2>
+  </a>
+</div>
