--- a/archiv.html
+++ b/archiv.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="header-archiv">
+<div class="date-archiv">
   <h2>August 2016</h2>
 </div>
 <section class="container-archiv">
@@ -32,7 +32,7 @@ layout: default
   </div>
 </section>
 
-<div class="header-archiv">
+<div class="date-archiv">
   <h2>Juli 2016</h2>
 </div>
 <section class="container-archiv">
