--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@ layout: default
 ---
 
 {% for post in site.posts %}
-  <div class="white p2 mb4 index-img" style="background-image: url('{{ post.image }}')">
+<div class="index-box">
+  <a href="{{ post.url }}">
+    <div class="index-img"style="background-image: url('{{ post.image }}')">
         <h3>{{ post.date | date: "%-d %B %Y"}}</h3>
-        <h1><a class="white" href="{{ post.url }}">{{ post.title }}</a></h1>
+        <h1>{{ post.title }}</h1>
         <h2>{{ post.subtitle }}</h2>
-  </div>
+    </div>
+  </a>
+</div>
 {% endfor %}
