everything so pretty

--- a/archiv.html
+++ b/archiv.html
@@ -28,7 +28,7 @@ layout: default
     {% endif %}
 <div class="container-archiv">
   <a href="{{ post.url }}">
-      <div class="img-archiv">
+      <div>
           <img src="{{ post.image }}" alt="">
       </div>
     <h3>{{ post.title }} - {{ post.subtitle }}</h3>
