--- a/mehr.html
+++ b/mehr.html
@@ -5,18 +5,33 @@ layout: default
 
 <h2>Andere Themen</h2>
 
-<p>Wenn man auf große Reise geht, dann gibt es viel zu bedenken und zu planen. Hier findet ihr ein paar hilfreiche Tipps und Tricks, sowie Gedanken die wir uns gemacht haben.</p>
+<p>Wenn man auf große Reise geht, dann gibt es viel zu bedenken und zu planen. Hier findet ihr ein paar hilfreiche Tipps und Tricks, sowie Gedanken die wir uns gemacht haben und Themen über die wir einfach schreiben wollten. <br>
+Wenn ihr mehr Fragen habt oder euch einfach austauschen wollte, dann könnt ihr euch gerne bei uns melden. Am Besten per <a href="">Mail</a>.</p>
 
 <div class="themes-more">
   <a href="">
-    <img src="/img/nz-3.jpg" alt="">
-    <h2>Packliste</h2>
+    <h3>Unsere Packliste - was haben wir eigentlich dabei?</h3>
+    <img src="/img/nz-t-6.jpg" alt="">
   </a>
 </div>
 
 <div class="themes-more">
   <a href="">
-    <img src="/img/nz-3.jpg" alt="">
-    <h2>Packliste</h2>
+    <h3>Krankenversicherungen - </h3>
+    <img src="/img/nz-t-6.jpg" alt="">
+  </a>
+</div>
+
+<div class="themes-more">
+  <a href="">
+    <h3>Minimalismus - oder: wozu brauchen wir das ganze Zeug eigentlich?</h3>
+    <img src="/img/nz-t-6.jpg" alt="">
+  </a>
+</div>
+
+<div class="themes-more">
+  <a href="">
+    <h3>Reisen und Arbeiten - nützliches für digitale Nomaden</h3>
+    <img src="/img/nz-t-6.jpg" alt="">
   </a>
 </div>
