--- a/about.html
+++ b/about.html
@@ -5,14 +5,14 @@ layout: default
 
 <h2>Hallo</h2>
 
-<p class="text-about">Schön, dass ihr uns gefunden habt. Wir sind Verena&Flo und sind seir August 2016 auf grosser Reise. Wir haben in Deutschland alles verkauft, was sich so angesammelt hat und sind mit Rucksack und Laptop losgezogen.</p>
+<p class="text-about">Schön, dass ihr uns gefunden habt. Wir sind Verena & Flo und sind seit August 2016 auf grosser Reise. Wir haben in Deutschland alles verkauft, was sich so angesammelt hat und sind mit Rucksack und Laptop losgezogen.</p>
 
-<img class="img-about-left" src="/img/Fiji_1.jpg" alt="" />
+<img class="img-about-left" src="/img/fiji-1.jpg" alt="" />
 
-<p>Unser Blog dient dazu unser erlebtes niederzuschreiben, damit Familie, Freunde und alle die es sonst interessiert nachlesen können, was bei uns so passiert. Neben diesem Blog gibt es einen Wir versuchen den Blog immer so aktuell wie möglich zu halten, da wird aber viel Arbeiten während der Reise kommen wir doch nicht immer zum Schreiben. Für immer neue Bilder unserer Reise gibt es einen <a href="">Instagram-Account</a>. </p>
+<p>Unser Blog dient dazu unser erlebtes niederzuschreiben, damit Familie, Freunde und alle die es sonst interessiert nachlesen können, was bei uns so passiert. Wir versuchen den Blog immer so aktuell wie möglich zu halten, da wird aber viel Arbeiten während der Reise kommen wir doch nicht immer zum Schreiben. Für immer neue Bilder unserer Reise gibt es einen <a href="">Instagram-Account</a>. </p>
 
-<p class="text-about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p class="text-about">Bei vielen kommt hier die Frage auf, was machen die eigentlich und warum machen die das?? Also. Wir reisen gerne und wollen am liebsten die ganze Welt mal gesehen haben. Da man dafür aber Geld braucht arbeiten wir während der Reise. Wir entwickeln, designen und programmieren Webseiten und Apps und zum Glück ist das auch von unterwegs möglich. Das heisst also, wir liegen nicht den ganzen Tag am Strand und tun nichts, sondern wir arbeiten mindestens 40 Stunden pro Woche, das aber von wo wir wollen. Wo wir sind hängt von unserer Laune ab. Wir wollen immer ca. 3 Monate an einem Ort bleiben um wirklich anzukommen, den Ort und die Leute kennenzulernen und trotz der vielen Arbeit viel zu sehen und zu erleben. Für Abwechslung sorgen dann Wochen in denen wir beispielsweise mit einem Camper unterwegs sind und keinen festen Standort haben. Das ist dann wirklich Urlaub mit wenig Arbeit.</p>
 
-<img class="img-about-right" src="/img/Fiji_1.jpg" alt="" />
+<img class="img-about-right" src="/img/fiji-2.jpg" alt="" />
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Also, wenn ihr uns gerne engagieren wollte, weil ihr irgendwas mit Website oder App braucht, dann könnt ihr das gerne. Wir werden dann auch nicht zuviel vom guten Wetter und der Hängematte schwärmen von der aus wir arbeiten. Ansonsten freut es uns, wenn euch unser Blog gefällt, wenn ihr uns auf Instagram folgt und auch, wenn ihr uns eine Mail schreibt oder wir euch auf unseren Reisen treffen.</p>
