--- a/kontakt.html
+++ b/kontakt.html
@@ -4,8 +4,7 @@ layout: default
 
 
 <h2>Hier findet ihr uns gerade:</h2>
-<img class="img-kontakt" src="/img/Fiji_1.jpg" alt="Weltkarte" />
+<img class="img-kontakt" src="/img/nz-t-1.jpg" alt="Weltkarte" />
 
-<h2>Kontakt</h2>
-
-<p>Lorem ipsum sit amet, consectetur adipisicing elit. Modi, nostrum aliquam. Temporibus, repellat cumque sapiente necessitatibus, eaque aspernatur beatae minima minus dolorem aut cum quo optio nemo nihil enim ipsam.</p>
+<p class="text-kontakt">Erreichbar sind wir am Besten per <a href="mailto:">Mail</a>. Je nach Aufenthaltsort oder was wir gerade machen kann es aber etwas dauern bis wir antworten. <br>
+Wir sind auch zu finden auf <a href="">Instagram</a>. Hier gibt es immer die aktuellsten Bilder.</p>
