--- a/mehr.html
+++ b/mehr.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-<h2>Andere Themen</h2>
+<h2>Weitere Themen</h2>
 
 <p>Wenn man auf große Reise geht, dann gibt es viel zu bedenken und zu planen. Hier findet ihr ein paar hilfreiche Tipps und Tricks, sowie Gedanken die wir uns gemacht haben und Themen über die wir einfach schreiben wollten. <br>
 Wenn ihr mehr Fragen habt oder euch einfach austauschen wollte, dann könnt ihr euch gerne bei uns melden. Am Besten per <a href="">Mail</a>.</p>
