so many changes

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-
+<div class="about-all">
 <h2>Hallo</h2>
 
 <p class="text-about">Schön, dass ihr uns gefunden habt. Wir sind Verena & Flo und sind seit August 2016 auf grosser Reise. Wir haben in Deutschland alles verkauft, was sich so angesammelt hat und sind mit Rucksack und Laptop losgezogen.</p>
@@ -16,3 +16,4 @@ layout: default
 <img class="img-about-right" src="/img/fiji-2.jpg" alt="" />
 
 <p>Also, wenn ihr uns gerne engagieren wollte, weil ihr irgendwas mit Website oder App braucht, dann könnt ihr das gerne. Wir werden dann auch nicht zuviel vom guten Wetter und der Hängematte schwärmen von der aus wir arbeiten. Ansonsten freut es uns, wenn euch unser Blog gefällt, wenn ihr uns auf Instagram folgt und auch, wenn ihr uns eine Mail schreibt oder wir euch auf unseren Reisen treffen.</p>
+</div>
