--- a/archiv.html
+++ b/archiv.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-
+<div class="archiv-all">
 {% for post in site.posts %}
   {% capture month %}{{ post.date | date: '%m%Y' }}{% endcapture %}
   {% capture nmonth %}{{ post.next.date | date: '%m%Y' }}{% endcapture %}
@@ -35,3 +35,4 @@ layout: default
   </a>
 </div>
 {% endfor %}
+</div>
