--- a/kontakt.html
+++ b/kontakt.html
@@ -2,9 +2,11 @@
 layout: default
 ---
 
-
+<div class="kontakt-all">
 <h2>Hier findet ihr uns gerade:</h2>
 <img class="img-kontakt" src="/img/nz-t-1.jpg" alt="Weltkarte" />
 
 <p class="text-kontakt">Erreichbar sind wir am Besten per <a href="mailto:">Mail</a>. Je nach Aufenthaltsort oder was wir gerade machen kann es aber etwas dauern bis wir antworten. <br>
 Wir sind auch zu finden auf <a href="">Instagram</a>. Hier gibt es immer die aktuellsten Bilder.</p>
+
+</div>
