--- a/mehr.html
+++ b/mehr.html
@@ -2,23 +2,16 @@
 layout: default
 ---
 
-
+<div class="more-all">
 <h2>Weitere Themen</h2>
 
-<p>Wenn man auf große Reise geht, dann gibt es viel zu bedenken und zu planen. Hier findet ihr ein paar hilfreiche Tipps und Tricks, sowie Gedanken die wir uns gemacht haben und Themen über die wir einfach schreiben wollten. <br>
+<p class="text-more">Wenn man auf große Reise geht, dann gibt es viel zu bedenken und zu planen. Hier findet ihr ein paar hilfreiche Tipps und Tricks, sowie Gedanken die wir uns gemacht haben und Themen über die wir einfach schreiben wollten. <br>
 Wenn ihr mehr Fragen habt oder euch einfach austauschen wollte, dann könnt ihr euch gerne bei uns melden. Am Besten per <a href="">Mail</a>.</p>
 
 <div class="themes-more">
-  <a href="">
-    <h3>Unsere Packliste - was haben wir eigentlich dabei?</h3>
-    <img src="/img/nz-t-6.jpg" alt="">
-  </a>
-</div>
-
-<div class="themes-more">
-  <a href="">
-    <h3>Krankenversicherungen - </h3>
-    <img src="/img/nz-t-6.jpg" alt="">
+  <a href="/packliste">
+    <h3>Unsere Packliste - was haben wir eigentlich alles dabei?</h3>
+    <img src="/img/rucksack.png" alt="">
   </a>
 </div>
 
@@ -34,4 +27,12 @@ Wenn ihr mehr Fragen habt oder euch einfach austauschen wollte, dann könnt ihr 
     <h3>Reisen und Arbeiten - nützliches für digitale Nomaden</h3>
     <img src="/img/nz-t-6.jpg" alt="">
   </a>
+</div>
+
+<div class="themes-more">
+  <a href="">
+    <h3>Krankenversicherungen - </h3>
+    <img src="/img/nz-t-6.jpg" alt="">
+  </a>
+</div>
 </div>
