--- a/index.html
+++ b/index.html
@@ -2,22 +2,38 @@
 layout: default
 ---
 
-{% for post in site.posts limit:3 %}
-  {% if post.categorie contains 'blog' %}
-{% assign months = "Januar|Februar|März|April|Mai|Juni|Juli|August|September|Oktober|November|Dezember" | split: "|" %}
-{% assign m = post.date | date: "%-m" | minus: 1 %}
-{% assign day = post.date | date: "%d" %}
-{% assign month = months[m] %}
-{% assign year = post.date | date: "%Y" %}
-
-<a href="{{ post.url }}">
-    <div class="index-img image-with-text" style="background-image: url('{{ post.image }}')">
-   		 <div class="text-on-image">
-	        <h3>{{ day }}. {{ month }} {{ year }}</h3>
-	        <h1>{{ post.title }}</h1>
-	        <h2>{{ post.subtitle }}</h2>
-		  </div>
-    </div>
-  </a>
-   {% endif %}
+{% for category in site.categories %}
+  {% if category.first contains 'blog' %}  
+    {% for posts in category %}
+      {% for post in posts limit:3 %}
+        {% if post.url %}
+          <a href="{{ post.url }}">
+              <div class="index-img image-with-text" style="background-image: url('{{ post.image }}')">
+                 <div class="text-on-image">
+                  <h3>{% assign m = post.date | date: "%-m" %}
+                      {% case m %}
+                        {% when '1' %}Januar
+                        {% when '2' %}Februar
+                        {% when '3' %}März
+                        {% when '4' %}April
+                        {% when '5' %}Mai
+                        {% when '6' %}Juni
+                        {% when '7' %}Juli
+                        {% when '8' %}August
+                        {% when '9' %}September
+                        {% when '10' %}Oktober
+                        {% when '11' %}November
+                        {% when '12' %}Dezember
+                      {% endcase %}
+                      {{ post.date | date: "%Y" }}
+                    </h3>
+                    <h1>{{ post.title }}</h1>
+                    <h2>{{ post.subtitle }}</h2>
+                </div>
+              </div>
+          </a>
+        {% endif %}
+      {% endfor %}
+    {% endfor %}
+  {% endif %}
 {% endfor %}
