change header names

--- a/reisetipps.html
+++ b/reisetipps.html
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: weitere themen
+title: reisetipps
 ---
 
-<h2>Weitere Themen</h2>
+<h2>Reisetipps</h2>
 
 <p>Wenn man auf große Reise geht, dann gibt es viel zu bedenken und zu planen. Hier findet ihr hilfreiche Tipps und Tricks, sowie Gedanken die wir uns gemacht haben und Themen über die wir einfach schreiben wollten.</p>
 
